PYIC-6237 Implement additional management endpoint to enqueue error responses
