# di-ipv-dcmaw-async-stub/lambdas/src/handlers/managementEnqueueErrorHandler.ts
@@ -1,9 +1,7 @@
 import { APIGatewayProxyEventV2, APIGatewayProxyResultV2 } from "aws-lambda";
-import { importPKCS8, SignJWT } from "jose";
 import { buildApiResponse } from "../common/apiResponse";
 import getErrorMessage from "../common/errorReporting";
-import { buildMockVc } from "../domain/mockVc";
-import { ManagementEnqueueVcRequest } from "../domain/managementEnqueueRequest";
+import { ManagementEnqueueErrorRequest } from "../domain/managementEnqueueRequest";
 import { getState } from "../services/userStateService";
 import getConfig from "../common/config";
 
@@ -22,28 +20,14 @@ export async function handler(
       return buildApiResponse({ errorMessage: requestBody }, 400);
     }
 
-    const vc = await buildMockVc(
-      requestBody.user_id,
-      requestBody.test_user,
-      requestBody.document_type,
-      requestBody.evidence_type,
-      requestBody.ci,
-    );
-
-    const signingKey = await importPKCS8(
-      `-----BEGIN PRIVATE KEY-----\n${config.vcSigningKey}\n-----END PRIVATE KEY-----`, // pragma: allowlist secret - the key is coming from config
-      "ES256",
-    );
-    const signedJwt = await new SignJWT(vc)
-      .setProtectedHeader({ alg: "ES256", typ: "JWT" })
-      .sign(signingKey);
-
     const state = await getState(requestBody.user_id);
 
     const queueMessage = {
       sub: requestBody.user_id,
       state,
-      "https://vocab.account.gov.uk/v1/credentialJWT": [signedJwt],
+      error: requestBody.error_code,
+      error_description:
+        requestBody.error_description ?? "Error sent via DCMAW Async CRI stub",
     };
 
     await fetch(config.queueStubUrl, {
@@ -72,19 +56,14 @@ export async function handler(
 
 function parseRequest(
   event: APIGatewayProxyEventV2,
-): string | ManagementEnqueueVcRequest {
+): string | ManagementEnqueueErrorRequest {
   if (event.body === undefined) {
     return "No request body";
   }
 
   const requestBody = JSON.parse(event.body);
 
-  const mandatoryFields = [
-    "user_id",
-    "test_user",
-    "document_type",
-    "evidence_type",
-  ];
+  const mandatoryFields = ["user_id", "error_code"];
   const missingFields = mandatoryFields.filter(
     (field) => requestBody[field] === undefined,
   );
@@ -93,5 +72,5 @@ function parseRequest(
     return "Request body is missing fields: " + missingFields.join(", ");
   }
 
-  return requestBody as ManagementEnqueueVcRequest;
+  return requestBody as ManagementEnqueueErrorRequest;
 }
